--- a/petprojectweb/src/Assets/ProfilePage.css
+++ b/petprojectweb/src/Assets/ProfilePage.css
@@ -35,7 +35,7 @@ html, body {
     align-items: center;
 }
 
-.avatar {
+.avatar-profile {
     width: 140px;
     height: 140px;
     border: 5px solid #fff;
@@ -44,7 +44,7 @@ html, body {
     background: #ddd;
 }
 
-    .avatar img {
+    .avatar-profile img {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -112,3 +112,8 @@ html, body {
         line-height: 1.5;
         color: #444;
     }
+
+.photo-item {
+    max-height: 600px;
+    max-width: 600px;
+}
