доделал уведомления так же сделал страницу друзей

--- a/petprojectweb/src/Assets/Notification.css
+++ b/petprojectweb/src/Assets/Notification.css
@@ -11,6 +11,10 @@
     padding: 10px;
 }
 
+.notifications-dropdown p {
+    color: black;
+}
+
 .notification-item {
     display: flex;
     align-items: center;
